--- a/StockBot/StockBot.csproj
+++ b/StockBot/StockBot.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BaseTypes\BaseTypes.csproj" />
     <ProjectReference Include="..\Init\Init.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
