--- a/StockBot/StockBot.csproj
+++ b/StockBot/StockBot.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="5.1.2" />
     <PackageReference Include="Telegram.Bot" Version="15.4.0" />
+    <PackageReference Include="YahooFinanceApi" Version="2.1.2" />
   </ItemGroup>
 
   <ItemGroup>
