--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BaseTypes\BaseTypes.csproj" />
+    <ProjectReference Include="..\Init\Init.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
