--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -10,6 +10,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="3.1.3" />
+    <PackageReference Include="SecuritiesEvaluation" Version="1.0.2" />
     <PackageReference Include="YahooFinanceApi" Version="2.1.2" />
   </ItemGroup>
 
@@ -18,12 +19,6 @@
     <ProjectReference Include="..\Exceptions\Exceptions.csproj" />
     <ProjectReference Include="..\Init\Init.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="SecuritiesEvaluation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\SecuritiesEvaluation.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
