--- a/StockBot/StockBot.csproj
+++ b/StockBot/StockBot.csproj
@@ -7,7 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="5.1.2" />
-    <PackageReference Include="Telegram.Bot" Version="15.4.0" />
+    <PackageReference Include="SecuritiesEvaluation" Version="1.0.2" />
+    <PackageReference Include="Telegram.Bot" Version="15.5.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,12 +16,6 @@
     <ProjectReference Include="..\Exceptions\Exceptions.csproj" />
     <ProjectReference Include="..\Init\Init.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="SecuritiesEvaluation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\SecuritiesEvaluation.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
