--- a/StockBot/StockBot.csproj
+++ b/StockBot/StockBot.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="5.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="SecuritiesEvaluation" Version="1.0.3" />
     <PackageReference Include="Telegram.Bot" Version="15.5.1" />
   </ItemGroup>
