--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -11,6 +11,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="UOW\Interfaces" />
+    </ItemGroup>
+
+    <ItemGroup>
       <ProjectReference Include="..\Init\Init.csproj" />
     </ItemGroup>
 
