--- a/Init/Init.csproj
+++ b/Init/Init.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="5.1.4" />
+  </ItemGroup>
+
 </Project>
