--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\BaseTypes\BaseTypes.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
