--- a/StockBot/StockBot.csproj
+++ b/StockBot/StockBot.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BaseTypes\BaseTypes.csproj" />
     <ProjectReference Include="..\Bootstrapper\Bootstrapper.csproj" />
+    <ProjectReference Include="..\Boot\Boot.csproj" />
     <ProjectReference Include="..\Exceptions\Exceptions.csproj" />
     <ProjectReference Include="..\Init\Init.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
