--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,7 +9,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="3.1.4" />
     <PackageReference Include="SecuritiesEvaluation" Version="1.0.5" />
     <PackageReference Include="YahooFinanceApi" Version="2.1.2" />
   </ItemGroup>
